@startuml
skinparam linetype polyline
skinparam linetype ortho

class Player {
 - name: String
 - soldSigns: int
 + Player(String name, int balance, Character character)
 + setBalance(int value) : boolean
 + getBalance() : int
}
class Character {
 - name: String
 - image: String
 + Character(String name, String image)
}
package GameBoard{
}

class Balance {
  - balance : int
  + balance(int startingValue)
}



package ChanceCard {
}



class Die {
 Int faceValue
 - sides : int
 + Die(int sides)
 + Die()
 + roll() : int
}
class Language {
 - String lang
 - languageValues : String[*][]
 + updateLanguage(String language)
 + getLanguageValue(String key) : String
}



Player "1" o-- "0..1" GetOutOfJail
Player "1" o-- "0..1" CharacterSpecific
Player "1" o-- "1" Balance
Player "1" o-- "1" Character
Game "1" o-- "1..*" Language
Game "1" o-up- "1" GameBoard
Game "1" o-left- "20" ChanceCard
Game"1" o-- "1" Die
Game "1" o-right- "2..4" Player

Property "1" o-- "0..1" Player
Jail "1" o-- "0..4" Player
@enduml